provarAnt/00D1b0000000d5bEAA/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>ATG</fullName>
        <description>ATG Leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ATDSA_bookshelf__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Addl_Info__c</fullName>
        <inlineHelpText>enter any additional info regarding the link</inlineHelpText>
        <label>Add&apos;l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Information__c</fullName>
        <defaultValue>&quot;Physical Address&quot;</defaultValue>
        <description>read only field that tells the user this address info is for the physical address or location of the customer</description>
        <label>Address Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the user that this account should be assigned to.</inlineHelpText>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <inlineHelpText>optional</inlineHelpText>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bill_to_Attention_To__c</fullName>
        <inlineHelpText>Enter the name of the person who is in charge of billing at the dealership.</inlineHelpText>
        <label>Bill to Attention To</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <label>Business Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts/Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ProductInterest__c</fullName>
        <label>DupeBlocker - Ignore</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>A/P Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Principal/Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecommerce Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Parts/Fixed Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Sales Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_by_Manager__c</fullName>
        <formula>CreatedBy.Manager.FirstName &amp;&quot; &quot;&amp;CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Subtype__c</fullName>
        <label>Customer Subtype</label>
        <picklist>
            <controllingField>Customer_Type__c</controllingField>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - FEDERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - STATE, LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSURANCE COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASING COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESELLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle History Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHOLESALER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF( IsConverted = false, NOW() - LastModifiedDate, NULL)</formula>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Nameplates__c</fullName>
        <label>Dealer Nameplates</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley-Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_is_part_of_a_dealer_group__c</fullName>
        <label>Dealer is part of a dealer group?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_This_a_Priority__c</fullName>
        <inlineHelpText>If YES, your request will be processed within 72 hours.</inlineHelpText>
        <label>Is this a priority?</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Help__c</fullName>
        <description>Inform user that information is required or they are ready to convert the Lead.</description>
        <formula>IF (
 RecordType.Name=&quot;Unqualified Lead&quot;,

 IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000000g6KB&quot;, &quot;*&quot;, 16, 16) &amp; &quot; To convert a lead, the following are required:  all fields in this section except &apos;Mobile&apos;, both First and Last name, and lot size information in the &apos;Additional Dealer Information&apos; section below. Once complete, the Convert button will appear above.&quot;,

 IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000000g6RX&quot;, &quot;*&quot;, 16, 16) &amp; &quot; Lead conversion criteria has been met. Complete any other information you have in the sections below then click the &apos;Convert&apos; button above to create an Account, Contact, and Opportunity.&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Notes__c</fullName>
        <inlineHelpText>enter lead notes when the lead is updated to unqualified or duplicate request</inlineHelpText>
        <label>Lead Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size_New__c</fullName>
        <inlineHelpText>select the lot size that applies to the Dealer&apos;s used inventory</inlineHelpText>
        <label>Lot Size - New</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Size_Used__c</fullName>
        <inlineHelpText>select the lot size that applies to the Dealer&apos;s used inventory</inlineHelpText>
        <label>Lot Size - Used</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales_Volume__c</fullName>
        <inlineHelpText>Enter Number of Cars Sold per Month.</inlineHelpText>
        <label>Monthly Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_Used_Ratio__c</fullName>
        <defaultValue>&quot;50/50&quot;</defaultValue>
        <description>haystack field</description>
        <label>New to Used Ratio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Same_as_Physical_Address__c</fullName>
        <inlineHelpText>If YES, the billing address will automatically copy from the physical address.</inlineHelpText>
        <label>Billing Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.ImageServer?id=015E0000001Ezt5&amp;oid=00D1b0000000d5b&amp;lastMod=1349446966000&quot;, &quot;Title&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Dealer Type</label>
        <picklist>
            <controllingField>Customer_Type__c</controllingField>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_Same_as_Physical__c</fullName>
        <inlineHelpText>If YES, the web address will automatically copy from the physical address.</inlineHelpText>
        <label>Web Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_City__c</fullName>
        <label>Web City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_State_Province__c</fullName>
        <label>Web State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Street__c</fullName>
        <label>Web Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Zip_Postal_Code__c</fullName>
        <label>Web Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Bill_To_IDs__c</fullName>
        <inlineHelpText>Enter the 3rd party bill to SVOC Ids, separated by commas.</inlineHelpText>
        <label>3rd Party Bill-To IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>